--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -18,6 +18,8 @@
   "app": "src/app.ts",
   "target": "web",
   "dependencies": {
+    "docx": "^8.5.0",
+    "file-saver": "^2.0.5",
     "lz-string": "^1.5.0",
     "material-icons": "^1.13.12",
     "materialize-css": "^1.0.0",
@@ -28,15 +30,16 @@
     "translate.js": "^1.3.2"
   },
   "devDependencies": {
-    "@rspack/cli": "^0.7.4",
-    "@rspack/core": "^0.7.4",
+    "@rspack/cli": "^0.7.5",
+    "@rspack/core": "^0.7.5",
+    "@types/file-saver": "^2.0.7",
     "@types/materialize-css": "^1.0.14",
-    "@types/mithril": "^2.2.6",
+    "@types/mithril": "^2.2.7",
     "dotenv": "16.4.5",
-    "rimraf": "^5.0.7",
-    "sass": "^1.77.6",
+    "rimraf": "^6.0.1",
+    "sass": "^1.77.8",
     "sass-loader": "14.2.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.3"
   }
 }
