--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -24,21 +24,23 @@
     "material-icons": "^1.13.12",
     "materialize-css": "^1.0.0",
     "meiosis-setup": "^6.2.3",
-    "mithril": "^2.2.2",
+    "mithril": "^2.2.5",
     "mithril-materialized": "^1.1.6",
     "mithril-ui-form": "^1.10.5",
+    "stopwords-en": "^0.3.0",
+    "stopwords-nl": "^0.3.0",
     "translate.js": "^1.3.2"
   },
   "devDependencies": {
-    "@rspack/cli": "^1.0.5",
-    "@rspack/core": "^1.0.5",
+    "@rspack/cli": "^1.0.7",
+    "@rspack/core": "^1.0.7",
     "@types/file-saver": "^2.0.7",
     "@types/materialize-css": "^1.0.14",
     "@types/mithril": "^2.2.7",
     "dotenv": "16.4.5",
     "rimraf": "^6.0.1",
-    "sass": "^1.78.0",
-    "sass-loader": "16.0.1",
+    "sass": "^1.79.3",
+    "sass-loader": "16.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
