--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "crime_scrips",
+  "name": "crime_scripts",
   "version": "0.0.1",
   "description": "GUI for creating and editing crime scene scripts",
   "scripts": {
     "clean": "rimraf ./dist",
     "dev": "npm start",
-    "start": "npx rspack serve",
-    "build": "npx rspack build",
+    "start": "rspack serve",
+    "build": "rspack build",
     "build:domain": "npm run clean && npm run build"
   },
   "keywords": [
@@ -18,30 +18,32 @@
   "app": "src/app.ts",
   "target": "web",
   "dependencies": {
-    "docx": "^8.5.0",
+    "docx": "9.1.1",
     "file-saver": "^2.0.5",
     "lz-string": "^1.5.0",
-    "material-icons": "^1.13.12",
+    "material-icons": "^1.13.13",
     "materialize-css": "^1.0.0",
     "meiosis-setup": "^6.2.3",
-    "mithril": "^2.2.5",
-    "mithril-materialized": "^1.1.6",
-    "mithril-ui-form": "^1.10.5",
+    "mithril": "^2.2.13",
+    "mithril-materialized": "^1.3.5",
+    "mithril-ui-form": "^1.10.16",
     "stopwords-en": "^0.3.0",
     "stopwords-nl": "^0.3.0",
     "translate.js": "^1.3.2"
   },
   "devDependencies": {
-    "@rspack/cli": "^1.0.7",
-    "@rspack/core": "^1.0.7",
+    "@rspack/cli": "^1.2.2",
+    "@rspack/core": "^1.2.2",
     "@types/file-saver": "^2.0.7",
     "@types/materialize-css": "^1.0.14",
     "@types/mithril": "^2.2.7",
-    "dotenv": "16.4.5",
+    "dotenv": "16.4.7",
+    "esbuild": "^0.24.2",
+    "esbuild-register": "^3.6.0",
     "rimraf": "^6.0.1",
-    "sass": "^1.79.3",
-    "sass-loader": "16.0.2",
+    "sass": "^1.84.0",
+    "sass-loader": "16.0.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.7.3"
   }
 }
